--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -441,8 +441,8 @@
      <rect>
       <x>10</x>
       <y>280</y>
-      <width>301</width>
-      <height>31</height>
+      <width>336</width>
+      <height>50</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -553,7 +553,14 @@
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QTableView" name="tableView"/>
+      <widget class="QTableView" name="tableView">
+       <property name="selectionMode">
+        <enum>QAbstractItemView::SingleSelection</enum>
+       </property>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectRows</enum>
+       </property>
+      </widget>
      </item>
     </layout>
    </widget>
